docs/core/v0.7/_sources/reference/tmlt/core/transformations/base/index.rst.txt



***********
base
***********

.. py:module:: tmlt.core.transformations.base

.. autoapi-nested-parse::

   Base class for transformations.











Classes
=======

.. list-table::

   * - :class:`.Transformation`
     - Abstract base class for transformations.

   
.. py:class:: Transformation(input_domain, input_metric, output_domain, output_metric)

   Bases: :class:`abc.ABC`

   Abstract base class for transformations.






   .. automethod:: __init__
   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: output_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: stability_function(self, d_in)

      Returns the smallest d_out satisfied by the transformation.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If not overridden.


   .. py:method:: stability_relation(self, d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(self, other: Transformation) -> Transformation
               __or__(self, other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.


   .. py:method:: __call__(self, data)
      :abstractmethod:

      Perform transformation.






